--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
         "@types/node": "^16.11.25",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "axios": "^0.26.0",
+        "firebase": "^9.6.7",
         "node-sass": "^7.0.1",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-firebaseui": "^6.0.0",
         "react-hook-form": "^7.27.1",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
