--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/react-dom": "^17.0.11",
         "axios": "^0.26.0",
         "firebase": "^9.6.7",
+        "json-server": "^0.17.0",
         "node-sass": "^7.0.1",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
@@ -28,6 +29,7 @@
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
+        "redux-saga": "^1.1.3",
         "typescript": "^4.5.5",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4",
@@ -37,7 +39,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "server": "json-server --watch db.json --port 8080"
     },
     "eslintConfig": {
         "extends": [
