--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@hookform/resolvers": "^2.8.8",
         "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.4.3",
+        "@mui/styles": "^5.5.0",
         "@mui/x-data-grid": "^5.6.0",
         "@reduxjs/toolkit": "^1.7.2",
         "@testing-library/jest-dom": "^5.16.2",
@@ -19,6 +20,7 @@
         "@types/react-dom": "^17.0.11",
         "axios": "^0.26.0",
         "firebase": "^9.6.7",
+        "history": "^5.3.0",
         "json-server": "^0.17.0",
         "node-sass": "^7.0.1",
         "query-string": "^7.1.1",
